--- a/views/mails/index.handlebars
+++ b/views/mails/index.handlebars
@@ -55,6 +55,7 @@
                         <td style="width: 100%; line-height: 24px; font-size: 11pt;">
                             <h3>Welcome to Bloomer </h3>
                                 <h2>Welcome {{name}} to our App</h2>
+                                <p>{{message}}</p>
 
                         </td>
                     </tr>
