--- a/views/mails/index.handlebars
+++ b/views/mails/index.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Notification - Bloomer</title>
+    <title>Notification - DemandSystem</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
@@ -39,8 +39,8 @@
                         <td valign="middle" style="width: 100%;">
                             <a href="#">
                                 <img style="width: 125px; cursor: pointer"
-                                    src="https://bloomer.spearheadconsult.com/media/logos/logo.png"
-                                    alt="BloomerLogo">
+                                    src="https://bloomer.spearhead.com.ng/images/logo2.png"
+                                    alt="DemandSystemLogo">
                             </a>
                         </td>
                     </tr>
@@ -53,7 +53,7 @@
                     cellpadding="0" cellspacing="0" border="0" summary="">
                     <tr align="center" style="margin: 0px 10px;">
                         <td style="width: 100%; line-height: 24px; font-size: 11pt;">
-                            <h3>Welcome to Bloomer </h3>
+                            <h3>Welcome to DemandSystem </h3>
                                 <h2>Welcome {{name}} to our App</h2>
                                 <p>{{message}}</p>
 
@@ -66,7 +66,7 @@
                         <td style="width: 100%; ">
                             <div style="background: #EFEEEE; padding: 20px 0px">
                                 <p style="line-height: 20px; font-size: 0.75rem; color: black;">You’re getting this
-                                    message because your Bloomer account is connected to <a href="#">Bloomer </a><br />
+                                    message because your DemandSystem account is connected to <a href="#">DemandSystem </a><br />
                                 </p>
                             </div>
                         </td>
